--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
    
 }
 #main h1{
-    font-size:70px;
-    margin-left: 120px;
+    font-size:350%;
+    margin-left: 25%;
     color: #FBCA1B;
     font-weight: bold;
    font-family: 'Raleway';
@@ -25,7 +25,7 @@
     font-family: 'Raleway';
 }
 #main p{
-    margin-left:120px;
+    margin-left: 25%;
     color: #F1E7B0;
     font-family: 'Raleway';
 }
