--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ footer{
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #685A52;
-    color: white;
+    background-color: #F6EEC7;
+    color: saddlebrown;
     z-index: 10;
     display: flex;
     justify-content: center;
