--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 #main h2{
     font-size:20px;
-    color: darkorange;
+    color: #FBCA1B;
     font-weight: bold;
     font-family: 'Raleway';
 }
@@ -43,7 +43,6 @@ form{
     position:absolute;
     left:50%;
     top:0px;
-    height:100%;
     z-index:0;
     width: 50%;
 }
@@ -85,7 +84,7 @@ footer{
     bottom: 0;
     width: 100%;
     background-color: #F6EEC7;
-    color: saddlebrown;
+    color: black;
     z-index: 10;
     display: flex;
     justify-content: center;
