--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     color: #6A961F;
     font-weight: bold;
    font-family: 'Raleway';
+  
+   
 }
 #main h2{
     font-size:20px;
@@ -28,6 +30,7 @@
     margin-left: 25%;
     color: #92B473;
     font-family: 'Raleway';
+    
 }
 
 
@@ -101,16 +104,17 @@ iframe{
     position: absolute;
 }
 
-h4{
-    position:absolute;
-    margin-left: 140px;
-    bottom:20px;
+#bc{
+    /* position:absolute; */
+    /* margin-left: 150px; */
+    /* bottom:10px; */
+    color:white;
   
 }
 
 footer{
-    position: fixed;
-    bottom: 0;
+    position: fixed; 
+     bottom: 0; 
     width: 100%;
     background-color: #99badd;
     color: white;
@@ -137,4 +141,12 @@ margin-bottom:5px;
 button.btn{
     background-color: #99badd;
     border: 2px solid white;
+}
+
+#scanner-container{
+    border: 5px solid #99badd;
+    min-width:410px;
+    min-height:310px;
+    background-color: black;
+    border-radius: 10px;
 }
